fix font bug on mobiles

--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -61,7 +61,7 @@ html {
 body {
   color: #414141;
   background-color: #fffff8;
-  -webkit-text-size-adjust: 90%;
+  -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
 }
 
